--- a/Config/6_files.tex
+++ b/Config/6_files.tex
@@ -53,7 +53,7 @@
 %   syntax: \ntaddfile{glossaries}[list-type]{filename}
 \ntaddfile{glossaries}[glossary]{glossary}
 \ntaddfile{glossaries}[acronyms]{acronyms}
-\ntaddfile{glossaries}[symbols]{symbols}
+%\ntaddfile{glossaries}[symbols]{symbols}     % lista de Symbols
 
 %%------------------------------------------------------------
 % Main text - document chapters
@@ -67,13 +67,13 @@
 %%------------------------------------------------------------
 % Text appendices 
 % syntax: \ntaddfile{appendix}{filename}
-\ntaddfile{appendix}{appendix1}
-\ntaddfile{appendix}{appendix2}
+%\ntaddfile{appendix}{appendix1}
+%\ntaddfile{appendix}{appendix2}
 
 %%------------------------------------------------------------
 % Text annexes
 % syntax: \ntaddfile{annex}{filename}
-\ntaddfile{annex}{annex1}
+%\ntaddfile{annex}{annex1}
 % \ntaddfile{annex}{annex2}
 
 %%------------------------------------------------------------
