--- a/Config/8_list_of.tex
+++ b/Config/8_list_of.tex
@@ -17,8 +17,10 @@
 \ntaddlistof{listoffigures}      % The List of Figures. Comment to omit.
 \ntaddlistof{listoftables}       % The List of Tables. Comment to omit.
 % \ntaddlistof{listofalgorithms}   % The List of Algorithms for Algorithm2e
-\@ifpackageloaded{listings}%      % The List of Listings for package “listings”. Automatic if package loaded
-    {\ntaddlistof{lstlistoflistings}}{}
-\@ifpackageloaded{minted}%        % The List of Listings for the “minted” package. Automatic if package loaded
-    {\ntaddlistof{listoflistings}}{}
+%%%%%% % descomentar para ter lista de codigos %%%%%%
+% \@ifpackageloaded{listings}%      % The List of Listings for package “listings”. Automatic if package loaded
+%     {\ntaddlistof{lstlistoflistings}}{}
+% \@ifpackageloaded{minted}%        % The List of Listings for the “minted” package. Automatic if package loaded
+%     {\ntaddlistof{listoflistings}}{}%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ntaddlistof{listsofglossaries}  % The Glossary, and the lists of Acronyms and Symbols
