--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -32,7 +32,7 @@
 \usepackage{fancyhdr}
 \usepackage{hyperref}
 \usepackage{url}
-\usepackage{listings}
+%\usepackage{listings}      % descomentar para ter lista de codigos
 \usepackage{xcolor}
 \usepackage{enumerate}
 \usepackage{lipsum}
@@ -55,7 +55,7 @@
 
 % \usepackage{minted}    % Fontification of source code listings
 
-% \usepackage{listings}    % Fontification of source code listings
+% \usepackage{listings}    % Fontification of source code listings; % descomentar para ter lista de codigos bonita/diferente?
 %                          % In alternative, use the package “minted” (highly recomended)
 
 % \lstset{
