update bib Modules

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -366,3 +366,81 @@
 	pages 	 = {2102904},
 	doi = {https://doi.org/10.1002/aenm.202102904}
 }
+
+------------------------ DISSERTACAO --------------------------
+daqui para baixo so se encontram referências novas que foram colocadas
+após entrega da Preparação de Dissertação:
+
+---> DATASHEETS: https://tex.stackexchange.com/questions/42501/cite-a-standard-specification-or-data-sheet-from-a-company-institution-but-with
+@manual{LTC4012,
+    organization  = {Linear Technology Corporation},
+    title         = {High Efficiency, Multi-Chemistry Battery Charger with PowerPath Control},
+    number        = {LTC4012/ LTC4012-1/LTC4012-2},
+    year          = 2009,
+    month         = 3,
+    note          = {Rev. A}
+}
+@manual{AP64501,
+    organization  = {Diodes Incorporated},
+    title         = {3.8V to 40V Input, 5A Low IQ Synchronous Buck with Programmable Soft-Start Time},
+    number        = {AP64501},
+    year          = 2019,
+    month         = 8,
+    note          = {Rev. 4-2}
+}
+@manual{bq29209,
+    organization  = {Texas Instruments},
+    title         = {bq2920x Voltage Protection with Automatic Cell Balance for 2-Series Cell Li-Ion Batteries},
+    number        = {bq29200, bq29209},
+    year          = 2010,
+    month         = 9,
+    note          = {Rev. March 2016}
+}
+@manual{CM4,
+    organization  = {Raspberry Pi Ltd},
+    title         = {A Raspberry Pi for deeply embedded applications},
+    number        = {Raspberry Pi Compute Module 4},
+    year          = 2022,
+    month         = 6,
+    note          =  {build-version: githash: 2daf50f-clean}
+}
+@manual{ZED_F9P,
+    organization  = {u-blox},
+    title         = {u-blox F9 high precision GNSS module},
+    number        = {ZED-F9P-04B},
+    year          = 2022,
+    month         = 5,
+    note          = {Rev. R02}
+}
+@manual{LM2901,
+    organization  = {Texas Instruments},
+    title         = {LM339, LM239, LM139, LM2901 Quad Differential Comparators},
+    number        = {LM2901},
+    year          = 1979,
+    month         = 10,
+    note          = {Rev. November 2018}
+}
+@manual{LP2981,
+    organization  = {Texas Instruments},
+    title         = {LP2981 100-mA Ultra-Low Dropout Regulators With Shutdown},
+    number        = {LP2981},
+    year          = 2004,
+    month         = 7,
+    note          = {Rev. August 2016}
+}
+@manual{ZigBee,
+    organization  = {Digi},
+    title         = {Hardware Reference Manual},
+    number        = {Digi XBee 3 RF Module},
+    year          = 2022,
+    month         = 3,
+    note          = {Rev. V}
+}
+@manual{LAN9514,
+    organization  = {Microchip},
+    title         = {USB 2.0 Hub and 10/100 Ethernet Controller},
+    number        = {LAN9514/LAN9514I},
+    year          = 2009,
+    month         = 3,
+    note          = {Rev. DS00002306A}
+}
