--- a/Config/5_cover.tex
+++ b/Config/5_cover.tex
@@ -74,7 +74,7 @@
 %   use [f] for female and [m] for male
 %   use "\\" to break the lines in the appropriate place
 %   syntax: \ntaddperson{adviser}[gender]{Name, Position, School}
-\ntaddperson{adviser}[m]{{João Pedro Oliveira, Assistant Professor, NOVA University Lisbon}}               % jpao
+\ntaddperson{adviser}[m]{{João Pedro Abreu de Oliveira, Assistant Professor, NOVA University Lisbon}}               % jpao
 % \ntaddperson{adviser}[f]{{Mary Doe other Adviser Name, Full Professor, NOVA University Lisbon}}
 % \ntaddperson{adviser}[f]{{Mary Doe yet another Adviser Name, Full Professor, NOVA University Lisbon}}
 
