--- a/Config/6_files.tex
+++ b/Config/6_files.tex
@@ -58,10 +58,15 @@
 %%------------------------------------------------------------
 % Main text - document chapters
 %   syntax: \ntaddfile{chapter}{filename}
-\ntaddfile{chapter}{chapter1}
-\ntaddfile{chapter}{chapter2}
-\ntaddfile{chapter}{chapter3}
-\ntaddfile{chapter}{chapter4}
+\ntaddfile{chapter}{chapter1_Introduction}
+\ntaddfile{chapter}{chapter2_SotA}
+\ntaddfile{chapter}{chapter3_Specs_Requirements}
+\ntaddfile{chapter}{chapter4_HardwareDesign}
+\ntaddfile{chapter}{chapter5_Prototyping}
+\ntaddfile{chapter}{chapter6_Testing}
+\ntaddfile{chapter}{chapter7_SolutionsNextVersion}
+\ntaddfile{chapter}{chapterFinal_Conclusion}
+\ntaddfile{chapter}{ChapterSpecifications_Workflow}        %remover este capitulo apos aproveitar as Specifications!
 % \ntaddfile{chapter}{chapter-last}
 
 %%------------------------------------------------------------
