SotA enviado ao JPAO antes de Paris_v1

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -372,6 +372,28 @@ daqui para baixo so se encontram referências novas que foram colocadas
 após entrega da Preparação de Dissertação:
 
 ---> DATASHEETS: https://tex.stackexchange.com/questions/42501/cite-a-standard-specification-or-data-sheet-from-a-company-institution-but-with
+
+ooooooooooooooooooo OLD beRTK chips: oooooooooooooooooooooo
+
+@manual{LTC4417,
+    organization  = {Linear Technology Corporation},
+    title         = {Prioritized PowerPath Controller},
+    number        = {LTC4417},
+    year          = 2012,
+}
+
+@manual{RPi4B,
+    organization  = {Raspberry Pi Ltd},
+    title         = {Datasheet},
+    number        = {Raspberry Pi 4 Model B},
+    year          = 2019,
+    month         = 6
+}
+
+ZED-F9P - ja meti
+
+nnnnnnnnnnnnnnnnnnn NEW beRTK chips: nnnnnnnnnnnnnnnnnnnnnn
+
 @manual{LTC4012,
     organization  = {Linear Technology Corporation},
     title         = {High Efficiency, Multi-Chemistry Battery Charger with PowerPath Control},
@@ -401,8 +423,7 @@ após entrega da Preparação de Dissertação:
     title         = {A Raspberry Pi for deeply embedded applications},
     number        = {Raspberry Pi Compute Module 4},
     year          = 2022,
-    month         = 6,
-    note          =  {build-version: githash: 2daf50f-clean}
+    month         = 6
 }
 @manual{ZED_F9P,
     organization  = {u-blox},
@@ -428,10 +449,10 @@ após entrega da Preparação de Dissertação:
     month         = 7,
     note          = {Rev. August 2016}
 }
-@manual{ZigBee,
+@manual{XBee,
     organization  = {Digi},
-    title         = {Hardware Reference Manual},
-    number        = {Digi XBee 3 RF Module},
+    title         = {Digi XBee 3 RF Module Hardware Reference Manual},
+    number        = {XB3-24Z8UM},
     year          = 2022,
     month         = 3,
     note          = {Rev. V}
