estrutura final - 5 chapters

--- a/Config/6_files.tex
+++ b/Config/6_files.tex
@@ -60,13 +60,10 @@
 %   syntax: \ntaddfile{chapter}{filename}
 \ntaddfile{chapter}{chapter1_Introduction}
 \ntaddfile{chapter}{chapter2_SotA}
-\ntaddfile{chapter}{chapter3_Specs_Requirements}
-\ntaddfile{chapter}{chapter4_HardwareDesign}
-\ntaddfile{chapter}{chapter5_Prototyping}
-\ntaddfile{chapter}{chapter6_Testing}
-\ntaddfile{chapter}{chapter7_SolutionsNextVersion}
-\ntaddfile{chapter}{chapterFinal_Conclusion}
-\ntaddfile{chapter}{ChapterSpecifications_Workflow}        %remover este capitulo apos aproveitar as Specifications!
+\ntaddfile{chapter}{chapter3_HardwareDesign}
+\ntaddfile{chapter}{chapter4_PrototypingPerf}
+\ntaddfile{chapter}{chapter5_ConclusionsFuture}
+%\ntaddfile{chapter}{ChapterSpecifications_Workflow}        %remover este capitulo apos aproveitar as Specifications!
 % \ntaddfile{chapter}{chapter-last}
 
 %%------------------------------------------------------------
