checkpoint - tem imagens de todos os subcircuitos

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -465,3 +465,13 @@ nnnnnnnnnnnnnnnnnnn NEW beRTK chips: nnnnnnnnnnnnnnnnnnnnnn
     month         = 3,
     note          = {Rev. DS00002306A}
 }
+
+@techreport{PWM,
+  title       = {How the Switching Frequency Affects the Performance of
+  a Buck Converter},
+  author      = {Henry Xie, Eric Guo},
+  institution = {Texas Instruments},
+  number      = {SLVAED3},
+  year        = 2019,
+  month       = 7
+}
