fiz ate ao voltage divider do PROG pin

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -402,6 +402,16 @@ nnnnnnnnnnnnnnnnnnn NEW beRTK chips: nnnnnnnnnnnnnnnnnnnnnn
     month         = 3,
     note          = {Rev. A}
 }
+transistor:
+@manual{2N7002,
+    organization  = {Diodes Incorporated},
+    title         = {N-CHANNEL ENHANCEMENT MODE FIELD EFFECT TRANSISTOR},
+    number        = {2N7002},
+    year          = 2020,
+    month         = 12,
+    note          = {Rev. 38 - 2}
+}
+
 @manual{AP64501,
     organization  = {Diodes Incorporated},
     title         = {3.8V to 40V Input, 5A Low IQ Synchronous Buck with Programmable Soft-Start Time},
