antes de mentir

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -411,6 +411,15 @@ transistor:
     month         = 12,
     note          = {Rev. 38 - 2}
 }
+bateria:
+@manual{INR18650-35E,
+    organization  = {Samsung SDI Co., Ltd.},
+    title         = {SPECIFICATION OF PRODUCT for Lithium-ion rechargeable cell},
+    number        = {INR18650-35E},
+    year          = 2015,
+    month         = 7,
+    note          = {Ver. 1.1}
+}
 
 @manual{AP64501,
     organization  = {Diodes Incorporated},
