retirei a parte do 2-level charge porque o NMOS nao fazia sentido

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -420,6 +420,12 @@ bateria:
     month         = 7,
     note          = {Ver. 1.1}
 }
+@online{C-rate,
+	author	= {{Power Sonic Corporation}},
+	title 	= {WHAT IS A BATTERY C RATING},
+	year 	= {2022},
+	url 	= {https://www.power-sonic.com/blog/what-is-a-battery-c-rating/}
+}	
 
 @manual{AP64501,
     organization  = {Diodes Incorporated},
