a fazer a tabela de indutores

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -402,6 +402,14 @@ nnnnnnnnnnnnnnnnnnn NEW beRTK chips: nnnnnnnnnnnnnnnnnnnnnn
     month         = 3,
     note          = {Rev. A}
 }
+PWM:
+@online{pwm_site,
+	author	= {{Eric Coates MA BSc.}},
+	title 	= {Module 3.1 - Buck Converters},
+	year 	= {2020},
+	url 	= {https://learnabout-electronics.org/PSU/psu31.php}
+}	
+
 transistor:
 @manual{2N7002,
     organization  = {Diodes Incorporated},
