--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -410,6 +410,15 @@ PWM:
 	url 	= {https://learnabout-electronics.org/PSU/psu31.php}
 }	
 
+@manual{AEC-Q100,
+    organization  = "Automotive Electronics Council",
+    title         = "FAILURE MECHANISM BASED STRESS TEST QUALIFICATION FOR INTEGRATED CIRCUITS",
+    number        = "AEC-Q100",
+    year          =  2007,
+    month         =  5,    
+    note          = "Rev-G"
+}
+
 transistor:
 @manual{2N7002,
     organization  = {Diodes Incorporated},
