A fazer 'FET selection' - depois vem 'The TGATE BOOST Supply'

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -419,7 +419,7 @@ PWM:
     note          = "Rev-G"
 }
 
-transistor:
+transistores:
 @manual{2N7002,
     organization  = {Diodes Incorporated},
     title         = {N-CHANNEL ENHANCEMENT MODE FIELD EFFECT TRANSISTOR},
@@ -427,6 +427,14 @@ transistor:
     year          = 2020,
     month         = 12,
     note          = {Rev. 38 - 2}
+}
+@manual{CSD17308Q3,
+    organization  = {Texas Instruments Incorporated},
+    title         = {CSD17308Q3 30-V N-Channel NexFET Power MOSFETs},
+    number        = {CSD17308Q3},
+    year          = 2019,
+    month         = 12,
+    note          = {Rev. B}
 }
 bateria:
 @manual{INR18650-35E,
