acabei 'FET selection' - pronto a entrar no 'The TGATE BOOST Supply'

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -436,6 +436,13 @@ transistores:
     month         = 12,
     note          = {Rev. B}
 }
+@manual{Si7212DN,
+    organization  = {Vishay Siliconix},
+    title         = {Dual N-Channel 30-V (D-S) MOSFET},
+    number        = {Si7212DN},
+    year          = 2019,
+    month         = 1
+}
 bateria:
 @manual{INR18650-35E,
     organization  = {Samsung SDI Co., Ltd.},
