--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,11 +1,11 @@
 % Encoding: UTF-8
 @Manual{novathesis-manual,
-	title       = {{The NOVAthesis \LaTeX\ Template User's Manual}},
-	author      = {João M. Lourenço},
-	organization={ NOVA University Lisbon},
-	year        = {2021},
-	url         = {https://github.com/joaomlourenco/novathesis/raw/master/template.pdf},
-	keywords    = {novathesis-manual},
+    title       = {{The NOVAthesis \LaTeX\ Template User's Manual}},
+    author      = {João M. Lourenço},
+    organization={ NOVA University Lisbon},
+    year        = {2021},
+    url         = {https://github.com/joaomlourenco/novathesis/raw/master/template.pdf},
+    keywords    = {novathesis-manual},
 }
 
 % 1. Estudos prévios - Bibliografia =======================================
@@ -13,358 +13,358 @@
 % Agriculture, Infrastructure, Safety:
 %------------------------------------------------------------------------
 @article{Zeder2011TheOO,
-	title	= {The Origins of Agriculture in the Near East},
-	author  = {Melinda A. Zeder},
-	journal = {Current Anthropology},
-	year	= {2011},
-	volume	= {52},
-	pages	= {S221 - S235}
-}																% USADO!
+    title   = {The Origins of Agriculture in the Near East},
+    author  = {Melinda A. Zeder},
+    journal = {Current Anthropology},
+    year    = {2011},
+    volume  = {52},
+    pages   = {S221 - S235}
+}                                                               % USADO!
 
 @Book{Roe1926,
-	author	  = "Joseph Wickham Roe",
-	title	  = "English and American Tool Builders",
-	year	  = "1926",
-	publisher = "McGraw-Hill Book Company, Inc.",
-}%	pages	  = {109 - 164}										% USADO!
+    author    = "Joseph Wickham Roe",
+    title     = "English and American Tool Builders",
+    year      = "1926",
+    publisher = "McGraw-Hill Book Company, Inc.",
+}%  pages     = {109 - 164}                                     % USADO!
 
 @article{dixon_2021,
-	title	= {Siberia's wildfires are bigger than all the world's other blazes combined},
-	journal	= {The Washington Post},
-	author	= {Dixon, Robyn},
-	date    = {2021-08-11},
-}																% USADO!
+    title   = {Siberia's wildfires are bigger than all the world's other blazes combined},
+    journal = {The Washington Post},
+    author  = {Dixon, Robyn},
+    date    = {2021-08-11},
+}                                                               % USADO!
 
 @article{roth_2021,
-	title	= {Russia forest fire damage worst since records began, says Greenpeace},
-	journal	= {The Guardian},
-	author	= {Roth, Andrew},
-	date    = {2021-09-22},
-}																% USADO!
+    title   = {Russia forest fire damage worst since records began, says Greenpeace},
+    journal = {The Guardian},
+    author  = {Roth, Andrew},
+    date    = {2021-09-22},
+}                                                               % USADO!
 
 % GPS:
 %------------------------------------------------------------------------
 @Book{fed_rad_plan_2008,
-	author	  = {{Department of Defense, Department of Homeland Security and Department of Transportation}},
-	title	  = {2008 Federal Radionavigation Plan},
-	year	  = {2008},
-	publisher = {Department of Defense, Department of Homeland Security, and
-	Department of Transportation},
-}																% USADO!
+    author    = {{Department of Defense, Department of Homeland Security and Department of Transportation}},
+    title     = {2008 Federal Radionavigation Plan},
+    year      = {2008},
+    publisher = {Department of Defense, Department of Homeland Security, and
+    Department of Transportation},
+}                                                               % USADO!
 
 @Book{novatel_gnss,
-	author	  = {{NovAtel Inc.}},
-	title	  = {An Introduction to GNSS},
-	year	  = {2015},
-	publisher = {NovAtel Inc.},
-}																% USADO!
+    author    = {{NovAtel Inc.}},
+    title     = {An Introduction to GNSS},
+    year      = {2015},
+    publisher = {NovAtel Inc.},
+}                                                               % USADO!
 
 @article{euspa_news_2022,
-	title	= {Galileo Launch 11},
-	journal	= {European Union Agency for the Space Programme},
-	author	= {{European Union Agency for the Space Programme}},
-	date    = {2022-02-01},
-}																% USADO!
+    title   = {Galileo Launch 11},
+    journal = {European Union Agency for the Space Programme},
+    author  = {{European Union Agency for the Space Programme}},
+    date    = {2022-02-01},
+}                                                               % USADO!
 
 @article{navic_news_2016,
-	title	= {With IRNSS-1G launch, India completes and renames its navigation constellation},
-	journal	= {GPS World},
-	author	= {{GPS World Staff}},
-	date    = {2016-04-29},
-}																% USADO!
+    title   = {With IRNSS-1G launch, India completes and renames its navigation constellation},
+    journal = {GPS World},
+    author  = {{GPS World Staff}},
+    date    = {2016-04-29},
+}                                                               % USADO!
 
 @misc{ayers_geosystems_2011,
-	place	  = {Winnipeg},
-	title	  = {GNSS (GPS and GLONASS) Positioning used in Land Surveying and Engineering},
-	journal	  = {Joint AMLS/APEGM Professional Development Seminar on GPS Best Practices Workshop},
-	publisher = {Manitoba, Canada},
-	author	  = {Ayers, Henri B and Leica Geosystems Ltd.},
-	year	  = {2011},
-	month	  = {Jan}
-}																% USADO!
+    place     = {Winnipeg},
+    title     = {GNSS (GPS and GLONASS) Positioning used in Land Surveying and Engineering},
+    journal   = {Joint AMLS/APEGM Professional Development Seminar on GPS Best Practices Workshop},
+    publisher = {Manitoba, Canada},
+    author    = {Ayers, Henri B and Leica Geosystems Ltd.},
+    year      = {2011},
+    month     = {Jan}
+}                                                               % USADO!
 
 @online{gps_USGov,
-	author	= {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
-	title 	= {The Global Positioning System},
-	year 	= {2021},
-	url 	= {https://www.gps.gov/systems/gps/}
-}																% USADO!
+    author  = {{National Coordination Office for Space-Based Positioning, Navigation, and Timing}},
+    title   = {The Global Positioning System},
+    year    = {2021},
+    url     = {https://www.gps.gov/systems/gps/}
+}                                                               % USADO!
 
 @online{pnt_2017,
-	author	= {{U.S. Department of Transportation}},
-	title 	= {What is Positioning, Navigation and Timing (PNT)?},
-	year 	= {2017},
-	url 	= {https://www.transportation.gov/pnt/what-positioning-navigation-and-timing-pnt}
-}																% USADO!
+    author  = {{U.S. Department of Transportation}},
+    title   = {What is Positioning, Navigation and Timing (PNT)?},
+    year    = {2017},
+    url     = {https://www.transportation.gov/pnt/what-positioning-navigation-and-timing-pnt}
+}                                                               % USADO!
 
 @Book{datum_2013,
-	author	  = {John R. Jensen, Ryan R. Jensen},
-	title	  = {Introductory Geographic Information Systems},
-	year	  = {2013},
-	publisher = {Pearson},
-}																% USADO!
+    author    = {John R. Jensen, Ryan R. Jensen},
+    title     = {Introductory Geographic Information Systems},
+    year      = {2013},
+    publisher = {Pearson},
+}                                                               % USADO!
 @INPROCEEDINGS{ca_p_code_1991,
-	author		= {Carl Hoefener, Bob Van Wechel},
-	booktitle	= {Proceedings of the 1991 National Technical Meeting of The Institute of Navigation}, 
-	title		= {P-Code Versus C/A-Code GPS For Range Tracking Applications}, 
-	year		= {1991},
-	pages		= {119-121},
-}																% USADO!
+    author      = {Carl Hoefener, Bob Van Wechel},
+    booktitle   = {Proceedings of the 1991 National Technical Meeting of The Institute of Navigation}, 
+    title       = {P-Code Versus C/A-Code GPS For Range Tracking Applications}, 
+    year        = {1991},
+    pages       = {119-121},
+}                                                               % USADO!
 
 @ARTICLE{ieee_terms_1997,
-	author	={},
-	journal	={IEEE Std 211-1997}, 
-	title	={IEEE Standard Definitions of Terms for Radio Wave Propagation}, 
-	year	={1998},
+    author  ={},
+    journal ={IEEE Std 211-1997}, 
+    title   ={IEEE Standard Definitions of Terms for Radio Wave Propagation}, 
+    year    ={1998},
 }
 
 @online{au_gov_satell,
-	author	= {{John Kennewell, Andrew McDonald}},
-	title 	= {Satellite Communications and Space Weather},
-	year 	= {2022},
-	url 	= {https://www.sws.bom.gov.au/Educational/1/3/2}
-}																% USADO!
+    author  = {{John Kennewell, Andrew McDonald}},
+    title   = {Satellite Communications and Space Weather},
+    year    = {2022},
+    url     = {https://www.sws.bom.gov.au/Educational/1/3/2}
+}                                                               % USADO!
 
 @Book{kaplan_2017,
-	author	  = {Kaplan, Elliott and Hegarty, Christopher},
-	title	  = {Understanding GPS/GNSS: Principles and Applications, Third Edition},
-	year	  = {2017},
-	publisher = {Artech House},
-}																% USADO!
+    author    = {Kaplan, Elliott and Hegarty, Christopher},
+    title     = {Understanding GPS/GNSS: Principles and Applications, Third Edition},
+    year      = {2017},
+    publisher = {Artech House},
+}                                                               % USADO!
 
 @online{inside_GNSS,
-	author	= {{Inside GNSS}},
-	title 	= {Generating Carrier Phase Measurements},
-	year 	= {2010},
-	url 	= {https://insidegnss.com/generating-carrier-phase-measurements/}
-}																% USADO!
+    author  = {{Inside GNSS}},
+    title   = {Generating Carrier Phase Measurements},
+    year    = {2010},
+    url     = {https://insidegnss.com/generating-carrier-phase-measurements/}
+}                                                               % USADO!
 
 @Book{groves_2008,
-	author	  = {Groves, Paul D.},
-	title	  = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
-	year	  = {2013},
-	publisher = {Artech House},
-}																% USADO!
+    author    = {Groves, Paul D.},
+    title     = {Principles of GNSS, Inertial, and Multisensor Integrated Navigation Systems, Second Edition},
+    year      = {2013},
+    publisher = {Artech House},
+}                                                               % USADO!
 
 @online{sbas_euspa_2021,
-	author	= {{European Union Agency for the Space Programme}},
-	title 	= {{What is SBAS?}},
-	year 	= {2021},
-	url 	= {https://www.euspa.europa.eu/european-space/eu-space-programme/what-sbas}
-}																% USADO!
+    author  = {{European Union Agency for the Space Programme}},
+    title   = {{What is SBAS?}},
+    year    = {2021},
+    url     = {https://www.euspa.europa.eu/european-space/eu-space-programme/what-sbas}
+}                                                               % USADO!
 
 @article{a_sbas_2021,
-	title	= {{Joint venture expands SBAS for business development in Africa}},
-	journal	= {GPS World},
-	author	= {Tracy Cozzens},
-	date    = {2021-07-23},
-}																% USADO!	
+    title   = {{Joint venture expands SBAS for business development in Africa}},
+    journal = {GPS World},
+    author  = {Tracy Cozzens},
+    date    = {2021-07-23},
+}                                                               % USADO!    
 
 @misc{ReNEP_ppt_2018,
-	place	  = {Amsterdam},
-	title	  = {{National Report of Portugal}},
-	journal	  = {{Symposium of the IAG Subcommission for Europe (EUREF)}},
-	publisher = {EUREF},
-	author	  = {{Department of Geodesy of the Portuguese Directorate-General for Territory}},
-	year	  = {2018},
-	month	  = {May}
-}																% USADO!	
+    place     = {Amsterdam},
+    title     = {{National Report of Portugal}},
+    journal   = {{Symposium of the IAG Subcommission for Europe (EUREF)}},
+    publisher = {EUREF},
+    author    = {{Department of Geodesy of the Portuguese Directorate-General for Territory}},
+    year      = {2018},
+    month     = {May}
+}                                                               % USADO!    
 
 @inproceedings{rtcm_tuga,
-	author 	= {Soares, Manuel and Malheiro, Benedita and Restivo, Francisco},
-	year 	= {2003},
-	month 	= {01},
-	title 	= {{A Distributed System for the Dissemination of DGPS Data through the Internet}}
-}																% USADO!
+    author  = {Soares, Manuel and Malheiro, Benedita and Restivo, Francisco},
+    year    = {2003},
+    month   = {01},
+    title   = {{A Distributed System for the Dissemination of DGPS Data through the Internet}}
+}                                                               % USADO!
 
 @inproceedings{rtcm_china,
-	author = {Heo, Yong and Yan, Thomas and Lim, Samsung and Rizos, Chris},
-	year   = {2009},
-	month  = {01},
-	title  = {International standard GNSS real-time data formats and protocols}
-}																% USADO!
+    author = {Heo, Yong and Yan, Thomas and Lim, Samsung and Rizos, Chris},
+    year   = {2009},
+    month  = {01},
+    title  = {International standard GNSS real-time data formats and protocols}
+}                                                               % USADO!
 
 % NTRIP___________________________________
 @article{ntrip_agleader,
-	title	= {{NTRIP/CORS: How it works and what is involved}},
-	journal	= {Ag Leader},
-	author	= {Ag Leader},
-	date    = {2019-07-26},
-}		
+    title   = {{NTRIP/CORS: How it works and what is involved}},
+    journal = {Ag Leader},
+    author  = {Ag Leader},
+    date    = {2019-07-26},
+}       
 
 @article{rtcm_cheat_sheet,
-	title	= {{An RTCM 3 message cheat sheet}},
-	journal	= {{SNIP Knowledge Base}},
-	author	= {Support},
-	date    = {2016-03-15},
-}	
+    title   = {{An RTCM 3 message cheat sheet}},
+    journal = {{SNIP Knowledge Base}},
+    author  = {Support},
+    date    = {2016-03-15},
+}   
 
 % --------- so far do texto que estou a passar a limpo, estou aqui ----------
 % articles about: RTK / BASE STATIONS / DRONES
 %------------------------------------------------------------------------
 % Beyond Vision:
 @online{beRTK_2022,
-	author	= {{Beyond Vision}},
-	title 	= {beRTK},
-	year 	= {2022},
-	url 	= {https://beyond-vision.pt/bertk}
-}																% USADO!
+    author  = {{Beyond Vision}},
+    title   = {beRTK},
+    year    = {2022},
+    url     = {https://beyond-vision.pt/bertk}
+}                                                               % USADO!
 
 % Creating Autonomous Vehicle Systems - about RTK Base Stations
 @Book{8093778,
-	author	= "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
-	title	= "Creating Autonomous Vehicle Systems",
-	year	= "2017",
-	volume	= {},
-	number	= {},
-	pages	= {},
-	doi		= {}
-}																% USADO!
+    author  = "Liu, Shaoshan and Li, Liyun and Tang, Jie and Wu, Shuang and Gaudiot, Jean-Luc",
+    title   = "Creating Autonomous Vehicle Systems",
+    year    = "2017",
+    volume  = {},
+    number  = {},
+    pages   = {},
+    doi     = {}
+}                                                               % USADO!
 
 @ARTICLE{8955794,
-	author	= {Pini, Marco and Marucco, Gianluca and Falco, Gianluca and Nicola, Mario and De Wilde, Wim},
-	journal	= {IEEE Access}, 
-	title	= {Experimental Testbed and Methodology for the Assessment of RTK GNSS Receivers Used in Precision Agriculture}, 
-	year	= {2020},
-	volume	= {8},
-	number	= {},
-	pages	= {14690-14703},
-	doi		= {10.1109/ACCESS.2020.2965741}
+    author  = {Pini, Marco and Marucco, Gianluca and Falco, Gianluca and Nicola, Mario and De Wilde, Wim},
+    journal = {IEEE Access}, 
+    title   = {Experimental Testbed and Methodology for the Assessment of RTK GNSS Receivers Used in Precision Agriculture}, 
+    year    = {2020},
+    volume  = {8},
+    number  = {},
+    pages   = {14690-14703},
+    doi     = {10.1109/ACCESS.2020.2965741}
 }
 
 @INPROCEEDINGS{8714161,
-	author		= {Świerczynski, Slawomir and Felski, Andrzej},
-	booktitle	= {2019 European Navigation Conference (ENC)}, 
-	title		= {Determination of the Position Using Receivers Installed in UAV}, 
-	year		= {2019},
-	volume		= {},
-	number		= {},
-	pages		= {1-4},
-}																% USADO!
+    author      = {Świerczynski, Slawomir and Felski, Andrzej},
+    booktitle   = {2019 European Navigation Conference (ENC)}, 
+    title       = {Determination of the Position Using Receivers Installed in UAV}, 
+    year        = {2019},
+    volume      = {},
+    number      = {},
+    pages       = {1-4},
+}                                                               % USADO!
 
 @INPROCEEDINGS{9292033,
-	author		= {Matsuura, Yuta and Heming, Zhang and Kawai, Shin and Nobuhara, Hajime},
-	booktitle	= {2020 IEEE 9th Global Conference on Consumer Electronics (GCCE)}, 
-	title		= {High-Precision/Throughput Growth Measurement of Crops by Drone with Stereo Matching Based on RTK-GNSS and Single Camera}, 
-	year		= {2020},
-	pages		= {936-939},
+    author      = {Matsuura, Yuta and Heming, Zhang and Kawai, Shin and Nobuhara, Hajime},
+    booktitle   = {2020 IEEE 9th Global Conference on Consumer Electronics (GCCE)}, 
+    title       = {High-Precision/Throughput Growth Measurement of Crops by Drone with Stereo Matching Based on RTK-GNSS and Single Camera}, 
+    year        = {2020},
+    pages       = {936-939},
 }
 
 @INPROCEEDINGS{8642671,
-	author		= {Thevenon, Paul and Vezinet, Jérémy and Estrade, Patrick},
-	booktitle	= {2018 9th ESA Workshop on Satellite NavigationTechnologies and European Workshop on GNSS Signals and Signal Processing (NAVITEC)}, 
-	title		= {Estimation of the Base Station Position Error in a RTK Receiver Using State Augmentation in a Kalman Filter}, 
-	year		= {2018},
-	volume		= {},
-	number		= {},
-	pages		= {1-7},
-	doi			= {10.1109/NAVITEC.2018.8642671}
+    author      = {Thevenon, Paul and Vezinet, Jérémy and Estrade, Patrick},
+    booktitle   = {2018 9th ESA Workshop on Satellite NavigationTechnologies and European Workshop on GNSS Signals and Signal Processing (NAVITEC)}, 
+    title       = {Estimation of the Base Station Position Error in a RTK Receiver Using State Augmentation in a Kalman Filter}, 
+    year        = {2018},
+    volume      = {},
+    number      = {},
+    pages       = {1-7},
+    doi         = {10.1109/NAVITEC.2018.8642671}
 }
 
 @INPROCEEDINGS{8909193,
-	author		= {Akarsu, Alper and Girici, Tolga},
-	booktitle	= {2019 International Symposium on Networks, Computers and Communications (ISNCC)}, 
-	title		= {Resilient Deployment of Drone Base Stations}, 
-	year		= {2019},
-	volume		= {},
-	number		= {},
-	pages		= {1-5},
-	doi			= {10.1109/ISNCC.2019.8909193}
+    author      = {Akarsu, Alper and Girici, Tolga},
+    booktitle   = {2019 International Symposium on Networks, Computers and Communications (ISNCC)}, 
+    title       = {Resilient Deployment of Drone Base Stations}, 
+    year        = {2019},
+    volume      = {},
+    number      = {},
+    pages       = {1-5},
+    doi         = {10.1109/ISNCC.2019.8909193}
 }
 
 @INPROCEEDINGS{6321639,
-	author		= {He, Meilin and Pan, Yuanjin and Wen, Hongyan and Luo, Manjian},
-	booktitle	= {World Automation Congress 2012}, 
-	title		= {Based on a single-base station RTK control survey and precision analysis}, 
-	year		= {2012},
-	volume		= {},
-	number		= {},
-	pages		= {1-4},
-	doi			= {}
+    author      = {He, Meilin and Pan, Yuanjin and Wen, Hongyan and Luo, Manjian},
+    booktitle   = {World Automation Congress 2012}, 
+    title       = {Based on a single-base station RTK control survey and precision analysis}, 
+    year        = {2012},
+    volume      = {},
+    number      = {},
+    pages       = {1-4},
+    doi         = {}
 }
 
 @INPROCEEDINGS{8899609,
-	author		= {Ahmed, Mir Faisal and Naveed, Emad M. and Nar, Pratham and Jindal, Sumit Kumar},
-	booktitle	= {2019 International Conference on Vision Towards Emerging Trends in Communication and Networking (ViTECoN)}, 
-	title		= {Design of an Autonomous drone for IoT deployment analysis}, 
-	year		= {2019},
-	volume		= {},
-	number		= {},
-	pages		= {1-4},
-	doi			= {10.1109/ViTECoN.2019.8899609}
+    author      = {Ahmed, Mir Faisal and Naveed, Emad M. and Nar, Pratham and Jindal, Sumit Kumar},
+    booktitle   = {2019 International Conference on Vision Towards Emerging Trends in Communication and Networking (ViTECoN)}, 
+    title       = {Design of an Autonomous drone for IoT deployment analysis}, 
+    year        = {2019},
+    volume      = {},
+    number      = {},
+    pages       = {1-4},
+    doi         = {10.1109/ViTECoN.2019.8899609}
 }
 
 @INPROCEEDINGS{6423099,
-	author		= {Laitinen, Heikki and Granström, Juha and Ström, Mårten and Baños, David Jiménez},
-	booktitle	= {2012 6th ESA Workshop on Satellite Navigation Technologies (Navitec 2012)   European Workshop on GNSS Signals and Signal Processing}, 
-	title		= {RTK+ system for precise navigation in shadowed areas}, 
-	year		= {2012},
-	volume		= {},
-	number		= {},
-	pages		= {1-7},
-	doi			= {10.1109/NAVITEC.2012.6423099}
+    author      = {Laitinen, Heikki and Granström, Juha and Ström, Mårten and Baños, David Jiménez},
+    booktitle   = {2012 6th ESA Workshop on Satellite Navigation Technologies (Navitec 2012)   European Workshop on GNSS Signals and Signal Processing}, 
+    title       = {RTK+ system for precise navigation in shadowed areas}, 
+    year        = {2012},
+    volume      = {},
+    number      = {},
+    pages       = {1-7},
+    doi         = {10.1109/NAVITEC.2012.6423099}
 }
 ---------------------
 % ZigBee:
 @Book{ZigBee_2008,
-	author	  = {Shahin Farahani},
-	title	  = {ZigBee Wireless Networks and Transceivers},
-	year	  = {2008},
-	publisher = {Elsevier},
+    author    = {Shahin Farahani},
+    title     = {ZigBee Wireless Networks and Transceivers},
+    year      = {2008},
+    publisher = {Elsevier},
 }
 
 ---------------------
 % LoRa:
 @INPROCEEDINGS{LoRa_8474715,
-	author	  = {Devalal, Shilpa and Karthikeyan, A.},
-	booktitle = {2018 Second International Conference on Electronics, Communication and Aerospace Technology (ICECA)}, 
-	title	  = {LoRa Technology - An Overview}, 
-	year	  = {2018},
-	pages	  = {284-290},
-	doi		  = {10.1109/ICECA.2018.8474715}
+    author    = {Devalal, Shilpa and Karthikeyan, A.},
+    booktitle = {2018 Second International Conference on Electronics, Communication and Aerospace Technology (ICECA)}, 
+    title     = {LoRa Technology - An Overview}, 
+    year      = {2018},
+    pages     = {284-290},
+    doi       = {10.1109/ICECA.2018.8474715}
 }
 
 % LoRa & ZigBee:
 @ARTICLE{LoRa_ZigBee_9181518,
-	author	= {Fraile, Lidia Pocero and Tsampas, Stelios and Mylonas, Georgios and Amaxilatis, Dimitrios},
-	journal	= {IEEE Access}, 
-	title	= {A Comparative Study of LoRa and IEEE 802.15.4-Based IoT Deployments Inside School Buildings}, 
-	year	= {2020},
-	volume	= {8},
-	pages	= {160957-160981},
-	doi		= {10.1109/ACCESS.2020.3020685}
+    author  = {Fraile, Lidia Pocero and Tsampas, Stelios and Mylonas, Georgios and Amaxilatis, Dimitrios},
+    journal = {IEEE Access}, 
+    title   = {A Comparative Study of LoRa and IEEE 802.15.4-Based IoT Deployments Inside School Buildings}, 
+    year    = {2020},
+    volume  = {8},
+    pages   = {160957-160981},
+    doi     = {10.1109/ACCESS.2020.3020685}
 }
 
 % Battery:
 %------------------------------------------------------------------------
 @article{ARMAND2020228708,
-	title	 = {Lithium-ion batteries - Current state of the art and anticipated developments},
-	journal	 = {Journal of Power Sources},
-	volume 	 = {479},
-	pages 	 = {228708},
-	year 	 = {2020},
-	issn 	 = {0378-7753},
-	doi 	 = {https://doi.org/10.1016/j.jpowsour.2020.228708},
-	author 	 = {Michel Armand, Peter Axmann, Dominic Bresser, Mark Copley, Kristina Edström, Christian Ekberg, Dominique Guyomard, Bernard Lestriez, Petr Novák, Martina Petranikova, Willy Porcher, Sigita Trabesinger, Margret Wohlfahrt-Mehrens and Heng Zhang}
+    title    = {Lithium-ion batteries - Current state of the art and anticipated developments},
+    journal  = {Journal of Power Sources},
+    volume   = {479},
+    pages    = {228708},
+    year     = {2020},
+    issn     = {0378-7753},
+    doi      = {https://doi.org/10.1016/j.jpowsour.2020.228708},
+    author   = {Michel Armand, Peter Axmann, Dominic Bresser, Mark Copley, Kristina Edström, Christian Ekberg, Dominique Guyomard, Bernard Lestriez, Petr Novák, Martina Petranikova, Willy Porcher, Sigita Trabesinger, Margret Wohlfahrt-Mehrens and Heng Zhang}
 }
-	% Battery Technology Handbook - pg 289
+    % Battery Technology Handbook - pg 289
 @book{kiehne2003,
-	title     = {Battery {T}echnology {H}andbook},
-	author    = {H.A. Kiehne},
-	editor    = {H.A. Kiehne},
-	year      = {2003},
-	publisher = {Marcel Dekker, Inc.},
-	address   = {New York}
+    title     = {Battery {T}echnology {H}andbook},
+    author    = {H.A. Kiehne},
+    editor    = {H.A. Kiehne},
+    year      = {2003},
+    publisher = {Marcel Dekker, Inc.},
+    address   = {New York}
 }
 
-	% FUTURO DAS BATERIAS 2030+
+    % FUTURO DAS BATERIAS 2030+
 @article{fichtner2021,
-	author	 = {Fichtner, Maximilian and Edström, Kristina and Ayerbe, Elixabete and Berecibar, Maitane and Bhowmik, Arghya and Castelli, Ivano E. and Clark, Simon and Dominko, Robert and Erakca, Merve and Franco, Alejandro A. and Grimaud, Alexis and Horstmann, Birger and Latz, Arnulf and Lorrmann, Henning and Meeus, Marcel and Narayan, Rekha and Pammer, Frank and Ruhland, Janna and Stein, Helge and Vegge, Tejs and Weil, Marcel},
-	title 	 = {Rechargeable Batteries of the Future—The State of the Art from a BATTERY 2030+ Perspective},
-	journal  = {Advanced Energy Materials},
-	year 	 = {2021},
-	pages 	 = {2102904},
-	doi = {https://doi.org/10.1002/aenm.202102904}
+    author   = {Fichtner, Maximilian and Edström, Kristina and Ayerbe, Elixabete and Berecibar, Maitane and Bhowmik, Arghya and Castelli, Ivano E. and Clark, Simon and Dominko, Robert and Erakca, Merve and Franco, Alejandro A. and Grimaud, Alexis and Horstmann, Birger and Latz, Arnulf and Lorrmann, Henning and Meeus, Marcel and Narayan, Rekha and Pammer, Frank and Ruhland, Janna and Stein, Helge and Vegge, Tejs and Weil, Marcel},
+    title    = {Rechargeable Batteries of the Future—The State of the Art from a BATTERY 2030+ Perspective},
+    journal  = {Advanced Energy Materials},
+    year     = {2021},
+    pages    = {2102904},
+    doi = {https://doi.org/10.1002/aenm.202102904}
 }
 
 ------------------------ DISSERTACAO --------------------------
@@ -404,11 +404,11 @@ nnnnnnnnnnnnnnnnnnn NEW beRTK chips: nnnnnnnnnnnnnnnnnnnnnn
 }
 PWM:
 @online{pwm_site,
-	author	= {{Eric Coates MA BSc.}},
-	title 	= {Module 3.1 - Buck Converters},
-	year 	= {2020},
-	url 	= {https://learnabout-electronics.org/PSU/psu31.php}
-}	
+    author  = {{Eric Coates MA BSc.}},
+    title   = {Module 3.1 - Buck Converters},
+    year    = {2020},
+    url     = {https://learnabout-electronics.org/PSU/psu31.php}
+}   
 
 @manual{AEC-Q100,
     organization  = "Automotive Electronics Council",
@@ -453,11 +453,11 @@ bateria:
     note          = {Ver. 1.1}
 }
 @online{C-rate,
-	author	= {{Power Sonic Corporation}},
-	title 	= {WHAT IS A BATTERY C RATING},
-	year 	= {2022},
-	url 	= {https://www.power-sonic.com/blog/what-is-a-battery-c-rating/}
-}	
+    author  = {{Power Sonic Corporation}},
+    title   = {WHAT IS A BATTERY C RATING},
+    year    = {2022},
+    url     = {https://www.power-sonic.com/blog/what-is-a-battery-c-rating/}
+}   
 
 @manual{AP64501,
     organization  = {Diodes Incorporated},
@@ -471,9 +471,33 @@ bateria:
     organization  = {Texas Instruments},
     title         = {bq2920x Voltage Protection with Automatic Cell Balance for 2-Series Cell Li-Ion Batteries},
     number        = {bq29200, bq29209},
-    year          = 2010,
+    year          = 2016,
     month         = 9,
     note          = {Rev. March 2016}
+}
+@manual{SN74LVC2G74DCTR,
+    organization  = {Texas Instruments},
+    title         = {SN74LVC2G74 Single Positive-Edge-Triggered D-Type Flip-Flop With Clear and Preset},
+    number        = {SN74LVC2G74},
+    year          = 2021,
+    month         = 4,
+    note          = {Rev. September 2021}
+}
+@manual{74AHC1G14,
+    organization  = {Diodes Incorporated},
+    title         = {SINGLE SCHMITT-TRIGGER INVERTER},
+    number        = {74AHC1G14},
+    year          = 2011,
+    month         = 3,
+    note          = {Rev. B}
+}
+@manual{MCP1790,
+    organization  = {Microchip},
+    title         = {70 mA, High Voltage Regulator},
+    number        = {MCP1790/MCP1791},
+    year          = 2010,
+    month         = 9,
+    note          = {Rev. 1-2}
 }
 @manual{CM4,
     organization  = {Raspberry Pi Ltd},
@@ -494,7 +518,7 @@ bateria:
     organization  = {Texas Instruments},
     title         = {LM339, LM239, LM139, LM2901 Quad Differential Comparators},
     number        = {LM2901},
-    year          = 1979,
+    year          = 2018,
     month         = 10,
     note          = {Rev. November 2018}
 }
@@ -502,7 +526,7 @@ bateria:
     organization  = {Texas Instruments},
     title         = {LP2981 100-mA Ultra-Low Dropout Regulators With Shutdown},
     number        = {LP2981},
-    year          = 2004,
+    year          = 2016,
     month         = 7,
     note          = {Rev. August 2016}
 }
