quase a acabar o CM4

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -506,6 +506,13 @@ bateria:
     year          = 2022,
     month         = 6
 }
+@manual{BCM2711_book,
+    organization  = {Raspberry Pi Ltd},
+    title         = {BCM2711 ARM Peripherals},
+    number        = {BCM2711},
+    year          = 2022,
+    month         = 1
+}
 @manual{ZED_F9P,
     organization  = {u-blox},
     title         = {u-blox F9 high precision GNSS module},
