CM4 done; HMI done

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -529,6 +529,14 @@ bateria:
     month         = 10,
     note          = {Rev. November 2018}
 }
+@manual{CDZVT2R15B,
+    organization  = {Texas Instruments},
+    title         = {CDZV10B},
+    number        = {Zener Diode},
+    year          = 2017,
+    month         = 01,
+    note          = {Rev. 003}
+}
 @manual{LP2981,
     organization  = {Texas Instruments},
     title         = {LP2981 100-mA Ultra-Low Dropout Regulators With Shutdown},
