XBee done; estrutura de capitulos mudada

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -545,6 +545,13 @@ bateria:
     month         = 7,
     note          = {Rev. August 2016}
 }
+@manual{PMEG2010ER,
+    organization  = {Nexperia},
+    title         = {PMEG2010ER},
+    number        = {1 A low VF MEGA Schottky barrier rectifier},
+    year          = 2017,
+    month         = 11
+}
 @manual{XBee,
     organization  = {Digi},
     title         = {Digi XBee 3 RF Module Hardware Reference Manual},
