--- a/Config/6_files.tex
+++ b/Config/6_files.tex
@@ -61,8 +61,9 @@
 \ntaddfile{chapter}{chapter1_Introduction}
 \ntaddfile{chapter}{chapter2_SotA}
 \ntaddfile{chapter}{chapter3_HardwareDesign}
-\ntaddfile{chapter}{chapter4_PrototypingPerf}
-\ntaddfile{chapter}{chapter5_ConclusionsFuture}
+\ntaddfile{chapter}{chapter4_C_PC}
+\ntaddfile{chapter}{chapter5_PrototypingPerf}
+\ntaddfile{chapter}{chapter6_ConclusionsFuture}
 %\ntaddfile{chapter}{ChapterSpecifications_Workflow}        %remover este capitulo apos aproveitar as Specifications!
 % \ntaddfile{chapter}{chapter-last}
 
