--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -563,12 +563,18 @@ bateria:
 @manual{LAN9514,
     organization  = {Microchip},
     title         = {USB 2.0 Hub and 10/100 Ethernet Controller},
-    number        = {LAN9514/LAN9514I},
+    number        = {LAN9514/LAN9514i},
     year          = 2009,
     month         = 3,
     note          = {Rev. DS00002306A}
 }
-
+@misc{LAN9514_ref_schematic,
+  title        = {LAN9514 Reference Design},
+  author       = {SMSC},
+  howpublished = {\url{https://ww1.microchip.com/downloads/en/DeviceDoc/9514_sch.pdf}},
+  year         = 2009,
+  note         = {Rev. 1.2}
+}
 @techreport{PWM,
   title       = {How the Switching Frequency Affects the Performance of
   a Buck Converter},
