1, 2, 3 and part of 5 of LAN9514 done

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -560,6 +560,7 @@ bateria:
     month         = 3,
     note          = {Rev. V}
 }
+
 @manual{LAN9514,
     organization  = {Microchip},
     title         = {USB 2.0 Hub and 10/100 Ethernet Controller},
@@ -575,6 +576,15 @@ bateria:
   year         = 2009,
   note         = {Rev. 1.2}
 }
+@manual{LAN9514_HW_Design_Checklist,
+    organization  = {Microchip},
+    title         = {LAN9514},
+    number        = {Hardware Design Checklist},
+    year          = 2022,
+    month         = 07,
+    note          = {Rev. DS00004678A}
+}
+
 @techreport{PWM,
   title       = {How the Switching Frequency Affects the Performance of
   a Buck Converter},
