--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -584,6 +584,20 @@ bateria:
     month         = 07,
     note          = {Rev. DS00004678A}
 }
+@manual{USB_Specification,
+    organization  = {Compaq, Hewlett-Packard, Intel, Lucent, Microsoft, NEC, Philips},
+    title         = {Universal Serial Bus Specification},
+    number        = {Revision 2.0},
+    year          = 2000,
+    month         = 04
+}
+@manual{MIC2026A,
+    organization  = {Micrel Inc.},
+    title         = {MIC2026A/2076A},
+    number        = {Dual-Channel Power Distribution Switch},
+    year          = 2009,
+    month         = 7
+}
 
 @techreport{PWM,
   title       = {How the Switching Frequency Affects the Performance of
