mid-routing USB 2.0

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -591,6 +591,12 @@ bateria:
     year          = 2000,
     month         = 04
 }
+@misc{USB_Routing,
+  title        = {Layout Basics for Universal Serial Bus (USB) Designs},
+  author       = {Julie Nirchi},
+  howpublished = {\url{https://training.ti.com/sites/default/files/docs/usb_layout_basics.pdf}},
+  year         = 2019
+}
 @manual{MIC2026A,
     organization  = {Micrel Inc.},
     title         = {MIC2026A/2076A},
