--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -28,6 +28,7 @@
 % ================================= PACKAGES METIDOS POR MIM: =======================================================
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{gensymb}
 % \usepackage{subcaption}
 \usepackage{epstopdf}
 \usepackage{fancyhdr}
