design rules net classes DONE

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -429,7 +429,7 @@ transistores:
     note          = {Rev. 38 - 2}
 }
 @manual{CSD17308Q3,
-    organization  = {Texas Instruments Incorporated},
+    organization  = {Texas Instruments},
     title         = {CSD17308Q3 30-V N-Channel NexFET Power MOSFETs},
     number        = {CSD17308Q3},
     year          = 2019,
@@ -597,6 +597,14 @@ bateria:
   howpublished = {\url{https://training.ti.com/sites/default/files/docs/usb_layout_basics.pdf}},
   year         = 2019
 }
+@manual{HDMI_Routing,
+    organization  = {Texas Instruments},
+    title         = {HDMI Design Guide},
+    number        = {High-Speed Interface Products},
+    year          = 2007,
+    month         = 06
+}
+
 @manual{MIC2026A,
     organization  = {Micrel Inc.},
     title         = {MIC2026A/2076A},
