--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -599,10 +599,10 @@ bateria:
 }
 @manual{HDMI_Routing,
     organization  = {Texas Instruments},
-    title         = {HDMI Design Guide},
-    number        = {High-Speed Interface Products},
-    year          = 2007,
-    month         = 06
+    title         = {High-Speed Layout Guidelines for Signal Conditioners and USB Hubs},
+    number        = {Application Report},
+    year          = 2018,
+    month         = 08
 }
 
 @manual{MIC2026A,
