--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -622,3 +622,10 @@ bateria:
   year        = 2019,
   month       = 7
 }
+
+@manual{pcbnew_kicad,
+    organization  = {KiCad},
+    title         = {Pcbnew},
+    year          = 2021,
+    month         = 10
+}
