--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -491,6 +491,15 @@ bateria:
     month         = 3,
     note          = {Rev. B}
 }
+@manual{74AHC1G04,
+    organization  = {Diodes Incorporated},
+    title         = {SINGLE INVERTER GATE},
+    number        = {74AHC1G04},
+    year          = 2011,
+    month         = 3,
+    note          = {Rev. 1-2}
+}
+
 @manual{MCP1790,
     organization  = {Microchip},
     title         = {70 mA, High Voltage Regulator},
@@ -584,6 +593,15 @@ bateria:
     month         = 07,
     note          = {Rev. DS00004678A}
 }
+@manual{LAN9514_Schematic_Checklist,
+    organization  = {Microchip},
+    title         = {Schematic Checklist for the LAN9514, 64-pin QFN Package},
+    number        = {SC471231},
+    year          = 2013,
+    month         = 01,
+    note          = {Rev. B}
+}
+
 @manual{USB_Specification,
     organization  = {Compaq, Hewlett-Packard, Intel, Lucent, Microsoft, NEC, Philips},
     title         = {Universal Serial Bus Specification},
