--- a/Config/7_packages.tex
+++ b/Config/7_packages.tex
@@ -34,7 +34,8 @@
 \usepackage{fancyhdr}
 \usepackage{hyperref}
 \usepackage{url}
-%\usepackage{listings}      % descomentar para ter lista de codigos
+\usepackage{listings}      % descomentar para ter lista de codigos
+
 \usepackage{xcolor}
 \usepackage{enumerate}
 \usepackage{lipsum}
