--- a/Config/5_cover.tex
+++ b/Config/5_cover.tex
@@ -13,7 +13,7 @@
 %%------------------------------------------------------------
 % Thesis/Dissertation title (valid for all languages unless redefined as below)
 %   syntax: \nttitle[lang]{title}
-\nttitle[en]{Design and implementation of\\a low-power RTK positioning\\base station for precise navigation}%
+\nttitle[en]{Design and Implementation of\\a Low-Power RTK Positioning\\Base Station for Precise Navigation}%
 %\nttitle[pt]{     falta meter aqui    }                         % é preciso meter?
 %   \nttitle{A Very Long and Impressive Thesis Title}%
 %   \nttitle[en]{The title in a Specific language}%
