--- a/Config/6_files.tex
+++ b/Config/6_files.tex
@@ -77,7 +77,7 @@
 % Text annexes
 % syntax: \ntaddfile{annex}{filename}
 \ntaddfile{annex}{annex1}
-% \ntaddfile{annex}{annex2}
+\ntaddfile{annex}{annex2}
 
 %%------------------------------------------------------------
 % Definition of the statement page, to be printed before the copyright
