Tailored commit with necessary ommissions

--- a/Config/5_cover.tex
+++ b/Config/5_cover.tex
@@ -14,7 +14,7 @@
 % Thesis/Dissertation title (valid for all languages unless redefined as below)
 %   syntax: \nttitle[lang]{title}
 \nttitle[en]{Design and Implementation of\\a Low-Power RTK Positioning\\Base Station for Precise Navigation}%
-%\nttitle[pt]{     falta meter aqui    }                         % é preciso meter?
+%\nttitle[pt]{     falta meter aqui    }                         
 %   \nttitle{A Very Long and Impressive Thesis Title}%
 %   \nttitle[en]{The title in a Specific language}%
 
@@ -55,7 +55,7 @@
 % Author full name, abbreviated name, and gender
 %   use [f] for female and [m] for male author
 %   syntax: \ntauthorname(language){full name}{abbreviated name}
-\ntauthorname[m]{Daniel Alexandre Feiteira da Silva}{Daniel Silva}
+\ntauthorname[m]{Daniel Silva}{Daniel Silva}
 
 %%------------------------------------------------------------
 % Author previous degree
@@ -74,7 +74,7 @@
 %   use [f] for female and [m] for male
 %   use "\\" to break the lines in the appropriate place
 %   syntax: \ntaddperson{adviser}[gender]{Name, Position, School}
-\ntaddperson{adviser}[m]{{João Pedro Abreu de Oliveira, Assistant Professor, NOVA University Lisbon}}               % jpao
+\ntaddperson{adviser}[m]{{}}               % 
 % \ntaddperson{adviser}[f]{{Mary Doe other Adviser Name, Full Professor, NOVA University Lisbon}}
 % \ntaddperson{adviser}[f]{{Mary Doe yet another Adviser Name, Full Professor, NOVA University Lisbon}}
 
@@ -83,8 +83,8 @@
 %   use [f] for female and [m] for male
 %   use "\\" to break the lines in the appropriate place
 %   syntax: \ntaddperson{coadviser}[gender]{Name, Position, School}
-\ntaddperson{coadviser}[m]{Pedro Miguel da Conceição Santos Lousã, Chief Operating Officer, Beyond Vision}       % pedro lousã
-%\ntaddperson{coadviser}[m]{John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}      % andré?
+\ntaddperson{coadviser}[m]{}       % 
+%\ntaddperson{coadviser}[m]{John Doe other Co-Adviser Name, Full Professor, NOVA University Lisbon}      % 
 
 %%------------------------------------------------------------
 % Committee members                                                 % para isto aparecer, ir ao 1_novathesis.tex, l.61
